{
  "version": 4,
  "terraform_version": "1.1.4",
  "serial": 755,
  "lineage": "2c6ee951-c083-a29e-85de-8b8f1c6e0993",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:902130451614:loadbalancer/app/myapp-load-balancer/b4b79bd99b2f0f52",
            "arn_suffix": "app/myapp-load-balancer/b4b79bd99b2f0f52",
            "desync_mitigation_mode": "defensive",
            "dns_name": "myapp-load-balancer-258921539.ap-northeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:902130451614:loadbalancer/app/myapp-load-balancer/b4b79bd99b2f0f52",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "myapp-load-balancer",
            "security_groups": [
              "sg-0dfab42bc02b01b36"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-067c3816fb9b17788"
              },
              {
                "subnet_id": "subnet-0d4d354875cdeb0ef"
              }
            ],
            "subnets": [
              "subnet-067c3816fb9b17788",
              "subnet-0d4d354875cdeb0ef"
            ],
            "vpc_id": "vpc-09388e46fa30fa357",
            "zone_id": "Z14GRHDCWA56QT"
          },
          "dependencies": [
            "aws_security_group.alb-sg",
            "aws_subnet.public",
            "aws_vpc.mappedswap-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:902130451614:listener/app/myapp-load-balancer/b4b79bd99b2f0f52/29d761a9d1291f57",
            "certificate_arn": "arn:aws:acm:ap-northeast-1:902130451614:certificate/efd6318f-3e94-4dc2-8da3-5cb9d09eb35a",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:902130451614:targetgroup/mappedswap-dApp-tg/f0f9f03e7db0bae3",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:902130451614:listener/app/myapp-load-balancer/b4b79bd99b2f0f52/29d761a9d1291f57",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:902130451614:loadbalancer/app/myapp-load-balancer/b4b79bd99b2f0f52",
            "port": 5432,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-TLS-1-2-2017-01",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_alb.alb",
            "aws_alb_target_group.mappedswap-dApp-tg",
            "aws_security_group.alb-sg",
            "aws_subnet.public",
            "aws_vpc.mappedswap-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "mappedswap-agent-tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:902130451614:targetgroup/mappedswap-agent-tg/18271ee058276c43",
            "arn_suffix": "targetgroup/mappedswap-agent-tg/18271ee058276c43",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:902130451614:targetgroup/mappedswap-agent-tg/18271ee058276c43",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "mappedswap-agent-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-09388e46fa30fa357"
          },
          "dependencies": [
            "aws_vpc.mappedswap-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "mappedswap-dApp-tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:902130451614:targetgroup/mappedswap-dApp-tg/f0f9f03e7db0bae3",
            "arn_suffix": "targetgroup/mappedswap-dApp-tg/f0f9f03e7db0bae3",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:902130451614:targetgroup/mappedswap-dApp-tg/f0f9f03e7db0bae3",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "mappedswap-dApp-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-09388e46fa30fa357"
          },
          "dependencies": [
            "aws_vpc.mappedswap-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "mappedswap-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06a01be72b15966b0",
            "domain": "vpc",
            "id": "eipalloc-06a01be72b15966b0",
            "network_border_group": "ap-northeast-1",
            "public_dns": "ec2-18-182-83-130.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "18.182.83.130",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.mappedswap-igw",
            "aws_vpc.mappedswap-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ae0ec50e62a8c09d",
            "domain": "vpc",
            "id": "eipalloc-0ae0ec50e62a8c09d",
            "network_border_group": "ap-northeast-1",
            "public_dns": "ec2-54-64-254-162.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "54.64.254.162",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.mappedswap-igw",
            "aws_vpc.mappedswap-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "mappedswap-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:902130451614:internet-gateway/igw-0aa49643e70df7bc0",
            "id": "igw-0aa49643e70df7bc0",
            "owner_id": "902130451614",
            "tags": {
              "Name": "mappedswap-igw"
            },
            "tags_all": {
              "Name": "mappedswap-igw"
            },
            "vpc_id": "vpc-09388e46fa30fa357"
          },
          "dependencies": [
            "aws_vpc.mappedswap-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "mappedswap-natgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06a01be72b15966b0",
            "connectivity_type": "public",
            "id": "nat-0802b3d6def92425a",
            "network_interface_id": "eni-04f4db502052dba71",
            "private_ip": "172.16.0.243",
            "public_ip": "18.182.83.130",
            "subnet_id": "subnet-0d4d354875cdeb0ef",
            "tags": {
              "Name": "mappedswap-natgw"
            },
            "tags_all": {
              "Name": "mappedswap-natgw"
            }
          },
          "dependencies": [
            "aws_eip.mappedswap-eip",
            "aws_internet_gateway.mappedswap-igw",
            "aws_subnet.public",
            "aws_vpc.mappedswap-vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ae0ec50e62a8c09d",
            "connectivity_type": "public",
            "id": "nat-0edad19f4baa4c6db",
            "network_interface_id": "eni-0a889a010f5a33d41",
            "private_ip": "172.16.1.34",
            "public_ip": "54.64.254.162",
            "subnet_id": "subnet-067c3816fb9b17788",
            "tags": {
              "Name": "mappedswap-natgw"
            },
            "tags_all": {
              "Name": "mappedswap-natgw"
            }
          },
          "dependencies": [
            "aws_eip.mappedswap-eip",
            "aws_internet_gateway.mappedswap-igw",
            "aws_subnet.public",
            "aws_vpc.mappedswap-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "internet_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0aa49643e70df7bc0",
            "id": "r-rtb-056b8235b47ccef461080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-056b8235b47ccef46",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.mappedswap-igw",
            "aws_vpc.mappedswap-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "RDSprivate",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:902130451614:route-table/rtb-0bbb04ca57bd6e44b",
            "id": "rtb-0bbb04ca57bd6e44b",
            "owner_id": "902130451614",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0802b3d6def92425a",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "RDS_routetable"
            },
            "tags_all": {
              "Name": "RDS_routetable"
            },
            "timeouts": null,
            "vpc_id": "vpc-09388e46fa30fa357"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.mappedswap-eip",
            "aws_internet_gateway.mappedswap-igw",
            "aws_nat_gateway.mappedswap-natgw",
            "aws_subnet.public",
            "aws_vpc.mappedswap-vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:902130451614:route-table/rtb-04b0d9a4eb02b94f1",
            "id": "rtb-04b0d9a4eb02b94f1",
            "owner_id": "902130451614",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0edad19f4baa4c6db",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "RDS_routetable"
            },
            "tags_all": {
              "Name": "RDS_routetable"
            },
            "timeouts": null,
            "vpc_id": "vpc-09388e46fa30fa357"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.mappedswap-eip",
            "aws_internet_gateway.mappedswap-igw",
            "aws_nat_gateway.mappedswap-natgw",
            "aws_subnet.public",
            "aws_vpc.mappedswap-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:902130451614:route-table/rtb-056e09f234ae3c14c",
            "id": "rtb-056e09f234ae3c14c",
            "owner_id": "902130451614",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0802b3d6def92425a",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private_routetable"
            },
            "tags_all": {
              "Name": "private_routetable"
            },
            "timeouts": null,
            "vpc_id": "vpc-09388e46fa30fa357"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.mappedswap-eip",
            "aws_internet_gateway.mappedswap-igw",
            "aws_nat_gateway.mappedswap-natgw",
            "aws_subnet.public",
            "aws_vpc.mappedswap-vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:902130451614:route-table/rtb-09352021566592455",
            "id": "rtb-09352021566592455",
            "owner_id": "902130451614",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0edad19f4baa4c6db",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private_routetable"
            },
            "tags_all": {
              "Name": "private_routetable"
            },
            "timeouts": null,
            "vpc_id": "vpc-09388e46fa30fa357"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.mappedswap-eip",
            "aws_internet_gateway.mappedswap-igw",
            "aws_nat_gateway.mappedswap-natgw",
            "aws_subnet.public",
            "aws_vpc.mappedswap-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "RDSprivate",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-080419319762dbc15",
            "route_table_id": "rtb-0bbb04ca57bd6e44b",
            "subnet_id": "subnet-0f0d8c0124b7cac71"
          },
          "dependencies": [
            "aws_eip.mappedswap-eip",
            "aws_internet_gateway.mappedswap-igw",
            "aws_nat_gateway.mappedswap-natgw",
            "aws_route_table.RDSprivate",
            "aws_subnet.privateRDS",
            "aws_subnet.public",
            "aws_vpc.mappedswap-vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08243794c21d3f893",
            "route_table_id": "rtb-04b0d9a4eb02b94f1",
            "subnet_id": "subnet-0aec4682b87eb1115"
          },
          "dependencies": [
            "aws_eip.mappedswap-eip",
            "aws_internet_gateway.mappedswap-igw",
            "aws_nat_gateway.mappedswap-natgw",
            "aws_route_table.RDSprivate",
            "aws_subnet.privateRDS",
            "aws_subnet.public",
            "aws_vpc.mappedswap-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0382a95bba2535d23",
            "route_table_id": "rtb-056e09f234ae3c14c",
            "subnet_id": "subnet-0182904793f190287"
          },
          "dependencies": [
            "aws_eip.mappedswap-eip",
            "aws_internet_gateway.mappedswap-igw",
            "aws_nat_gateway.mappedswap-natgw",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.mappedswap-vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-068775eff4b970462",
            "route_table_id": "rtb-09352021566592455",
            "subnet_id": "subnet-0dfc3f6582ba77033"
          },
          "dependencies": [
            "aws_eip.mappedswap-eip",
            "aws_internet_gateway.mappedswap-igw",
            "aws_nat_gateway.mappedswap-natgw",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.mappedswap-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:902130451614:security-group/sg-0dfab42bc02b01b36",
            "description": "controls access to the ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0dfab42bc02b01b36",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "app-load-balancer-security-group",
            "name_prefix": "",
            "owner_id": "902130451614",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-09388e46fa30fa357"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.mappedswap-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:902130451614:security-group/sg-04337242e958e0a54",
            "description": "allow inbound access from the ALB only",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04337242e958e0a54",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0dfab42bc02b01b36"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "app-ecs-tasks-security-group",
            "name_prefix": "",
            "owner_id": "902130451614",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-09388e46fa30fa357"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb-sg",
            "aws_vpc.mappedswap-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "jump_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:902130451614:security-group/sg-00f35c45670e17439",
            "description": "database admin management",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00f35c45670e17439",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-04337242e958e0a54"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "app-jump-security-group",
            "name_prefix": "",
            "owner_id": "902130451614",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-09388e46fa30fa357"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb-sg",
            "aws_security_group.ecs_sg",
            "aws_vpc.mappedswap-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:902130451614:security-group/sg-0b5818443b0ea0529",
            "description": "allow inbound access from ECS cluster only",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b5818443b0ea0529",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-04337242e958e0a54"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "app-rds-security-group",
            "name_prefix": "",
            "owner_id": "902130451614",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-09388e46fa30fa357"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb-sg",
            "aws_security_group.ecs_sg",
            "aws_vpc.mappedswap-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:902130451614:subnet/subnet-0182904793f190287",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "172.16.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0182904793f190287",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "902130451614",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_subnets"
            },
            "tags_all": {
              "Name": "private_subnets"
            },
            "vpc_id": "vpc-09388e46fa30fa357"
          },
          "dependencies": [
            "aws_vpc.mappedswap-vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:902130451614:subnet/subnet-0dfc3f6582ba77033",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "172.16.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dfc3f6582ba77033",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "902130451614",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_subnets"
            },
            "tags_all": {
              "Name": "private_subnets"
            },
            "vpc_id": "vpc-09388e46fa30fa357"
          },
          "dependencies": [
            "aws_vpc.mappedswap-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "privateRDS",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:902130451614:subnet/subnet-0f0d8c0124b7cac71",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "172.16.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f0d8c0124b7cac71",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "902130451614",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_RDS"
            },
            "tags_all": {
              "Name": "private_RDS"
            },
            "vpc_id": "vpc-09388e46fa30fa357"
          },
          "dependencies": [
            "aws_vpc.mappedswap-vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:902130451614:subnet/subnet-0aec4682b87eb1115",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "172.16.5.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0aec4682b87eb1115",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "902130451614",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_RDS"
            },
            "tags_all": {
              "Name": "private_RDS"
            },
            "vpc_id": "vpc-09388e46fa30fa357"
          },
          "dependencies": [
            "aws_vpc.mappedswap-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:902130451614:subnet/subnet-0d4d354875cdeb0ef",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "172.16.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d4d354875cdeb0ef",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "902130451614",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_subnets"
            },
            "tags_all": {
              "Name": "public_subnets"
            },
            "vpc_id": "vpc-09388e46fa30fa357"
          },
          "dependencies": [
            "aws_vpc.mappedswap-vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:902130451614:subnet/subnet-067c3816fb9b17788",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "172.16.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-067c3816fb9b17788",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "902130451614",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_subnets"
            },
            "tags_all": {
              "Name": "public_subnets"
            },
            "vpc_id": "vpc-09388e46fa30fa357"
          },
          "dependencies": [
            "aws_vpc.mappedswap-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "mappedswap-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:902130451614:vpc/vpc-09388e46fa30fa357",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.16.0.0/16",
            "default_network_acl_id": "acl-0eb51f7ef0432e3d0",
            "default_route_table_id": "rtb-056b8235b47ccef46",
            "default_security_group_id": "sg-0adad3205f69dc5bf",
            "dhcp_options_id": "dopt-0c27b95de865182ed",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-09388e46fa30fa357",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-056b8235b47ccef46",
            "owner_id": "902130451614",
            "tags": {
              "Name": "mappedswap-vpc"
            },
            "tags_all": {
              "Name": "mappedswap-vpc"
            }
          }
        }
      ]
    }
  ]
}